chore: JVM 로깅 추기